--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="./css/menu.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Hamburger Menu Overlay</title>
@@ -25,5 +26,13 @@
       </div>
     </div>
   </div>
+
+  <header id="showcase">
+    <div class="container showcase-container">
+      <h1>Welcome</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, autem esse? Adipisci sint nulla pariatur commodi quod, minus a accusantium!</p>
+      <a href="" class="btn">Read More</a>
+    </div>
+  </header>
 </body>
 </html>
